test/sematest/invalid/sysoutprintln3.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    System.System.out.println(1);
  }
}
